Added production rule for newline for subfiglist specification lexer

--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@ TODO
 * Use sequences in place of token lists
 * Delete unnecessary variables
 * Replace test for equal charcode by test for equal charcode AND equal meaning
+* Add change of meaning for `@' depending on catcode to known issues. Weird settings of catcodes e.g. for numbers may have strange effects
 
 
 
