--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -904,7 +904,7 @@
 %\makeatletter
 %\meaning @\\
 %\subfiglist_token_if_eq:NNTF \q_no_value \q_no_value t f
-%\subfiglist_test_conditionals:
+\subfiglist_test_conditionals:
 %\meaning \\ \\
 %\cs_new:Npn \show_meaning:N #1 { \meaning #1 }
 %\cs_generate_variant:Nn \show_meaning:N { V }
