--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -572,155 +572,10 @@
 }
 
 
-% Test whether token is a digit.
-\prg_new_conditional:Npnn \subfiglist_is_digit:N #1 { p, T, F, TF }
-%
-% #1: Token
-%
-{
-  % Exclude that a token list of the form { tokens } was passed
-  % to the N argument
-  \tl_if_single:nTF { #1 }
-  {
-    % Exclude that a token list of the form { { tokens } } was
-    % passed to the N argument
-    \tl_if_single:nTF #1
-    {
-      \bool_if:nTF
-      {
-        \token_if_eq_charcode_p:NN 0 #1 ||
-        \token_if_eq_charcode_p:NN 1 #1 ||
-        \token_if_eq_charcode_p:NN 2 #1 ||
-        \token_if_eq_charcode_p:NN 3 #1 ||
-        \token_if_eq_charcode_p:NN 4 #1 ||
-        \token_if_eq_charcode_p:NN 5 #1 ||
-        \token_if_eq_charcode_p:NN 6 #1 ||
-        \token_if_eq_charcode_p:NN 7 #1 ||
-        \token_if_eq_charcode_p:NN 8 #1 ||
-        \token_if_eq_charcode_p:NN 9 #1
-      }{
-        \prg_return_true:
-      }{
-        \prg_return_false:
-      }
-    }{
-      \prg_return_false:
-    }
-  }{
-    \prg_return_false:
-  }
-}
 
-% Define variants of \subfiglist_is_digit expanding its argument twice
-\cs_new:Npn \subfiglist_is_digit_p:t #1
-{
-  \subfiglist_exp_args:Nt \subfiglist_is_digit_p:N { #1 }
-}
-\cs_new:Npn \subfiglist_is_digit:tT #1 #2
-{
-  \subfiglist_exp_args:Nt \subfiglist_is_digit:NT { #1 } { #2 }
-}
-\cs_new:Npn \subfiglist_is_digit:tF #1 #2
-{
-  \subfiglist_exp_args:Nt \subfiglist_is_digit:NF { #1 } { #2 }
-}
-\cs_new:Npn \subfiglist_is_digit:tTF #1 #2 #3
-{
-  \subfiglist_exp_args:Nt \subfiglist_is_digit:NTF { #1 } { #2 } { #3 }
-}
-
-% Test whether token list is an integer or empty
-\prg_new_conditional:Npnn \subfiglist_is_integer_or_empty:n #1 { p, T, F, TF }
-%
-% #1: Token list
-%
-{
-  % Check whether token list is empty
-  \tl_if_empty:nTF { #1 }
-  {
-    \prg_return_true:
-  }{
-    % Does token list start with an explicit space?
-    \tl_if_head_is_space:nTF { #1 }
-    {
-      \prg_return_false:
-    }{
-      % Check whether first token is digit
-      \subfiglist_is_digit:tTF { \tl_head:n { #1 } }
-      {
-        % Check remaining tokens recursively
-        \subfiglist_is_integer_or_empty:tTF { \tl_tail:n { #1 } }
-        {
-          \prg_return_true:
-        }{
-          \prg_return_false:
-        }
-      }{
-        % Return false otherwise
-        \prg_return_false:
-      }
-    }
-  }
-}
-
-% Define variants of \subfiglist_is_integer_or_empty expanding its argument twice
-\cs_new:Npn \subfiglist_is_integer_or_empty_p:t #1
-{
-  \subfiglist_exp_args:Nt \subfiglist_is_integer_or_empty_p:n { #1 }
-}
-\cs_new:Npn \subfiglist_is_integer_or_empty:tT #1 #2
-{
-  \subfiglist_exp_args:Nt \subfiglist_is_integer_or_empty:nT { #1 } { #2 }
-}
-\cs_new:Npn \subfiglist_is_integer_or_empty:tF #1 #2
-{
-  \subfiglist_exp_args:Nt \subfiglist_is_integer_or_empty:nF { #1 } { #2 }
-}
-\cs_new:Npn \subfiglist_is_integer_or_empty:tTF #1 #2 #3
-{
-  \subfiglist_exp_args:Nt \subfiglist_is_integer_or_empty:nTF { #1 } { #2 } { #3 }
-}
-
-% Test whether token list is an integer
-\prg_new_conditional:Npnn \subfiglist_is_integer:n #1 { p, T, F, TF }
-%
-% #1: Token list
-%
-{
-  \bool_if:nTF
-  {
-    \bool_lazy_and_p:nn { ! \tl_if_empty_p:n { #1 } } { \subfiglist_is_integer_or_empty_p:n { #1 } }
-  }{
-    \prg_return_true:
-  }{
-    \prg_return_false:
-  }
-}
-
-
-% Define variants of \subfiglist_is_integer expanding its argument twice
-\cs_new:Npn \subfiglist_is_integer_p:t #1
-{
-  \subfiglist_exp_args:Nt \subfiglist_is_integer_p:n { #1 }
-}
-\cs_new:Npn \subfiglist_is_integer:tT #1 #2
-{
-  \subfiglist_exp_args:Nt \subfiglist_is_integer:nT { #1 } { #2 }
-}
-\cs_new:Npn \subfiglist_is_integer:tF #1 #2
-{
-  \subfiglist_exp_args:Nt \subfiglist_is_integer:nF { #1 } { #2 }
-}
-\cs_new:Npn \subfiglist_is_integer:tTF #1 #2 #3
-{
-  \subfiglist_exp_args:Nt \subfiglist_is_integer:nTF { #1 } { #2 } { #3 }
-}
-
-\cs_generate_variant:Nn \subfiglist_is_integer_p:n { V }
-\cs_generate_variant:Nn \subfiglist_is_integer:nT  { V }
-\cs_generate_variant:Nn \subfiglist_is_integer:nF  { V }
-\cs_generate_variant:Nn \subfiglist_is_integer:nTF { V }
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%   String comparison   %%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Test whether two tokens have equal character code and meaning
 \prg_new_conditional:Npnn \subfiglist_token_if_eq:NN #1 #2 { p, T, F, TF }
@@ -985,6 +840,161 @@
 \cs_generate_variant:Nn \subfiglist_tl_if_eq:nnTF { nf }
 \cs_generate_variant:Nn \subfiglist_tl_if_eq:nnTF { fn }
 \cs_generate_variant:Nn \subfiglist_tl_if_eq:nnTF { ff }
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%
+%%%   Number tests   %%%
+%%%%%%%%%%%%%%%%%%%%%%%%
+
+% Test whether token is a digit.
+\prg_new_conditional:Npnn \subfiglist_is_digit:N #1 { p, T, F, TF }
+%
+% #1: Token
+%
+{
+  % Exclude that a token list of the form { tokens } was passed
+  % to the N argument
+  \tl_if_single:nTF { #1 }
+  {
+    % Exclude that a token list of the form { { tokens } } was
+    % passed to the N argument
+    \tl_if_single:nTF #1
+    {
+      \bool_if:nTF
+      {
+        \token_if_eq_charcode_p:NN 0 #1 ||
+        \token_if_eq_charcode_p:NN 1 #1 ||
+        \token_if_eq_charcode_p:NN 2 #1 ||
+        \token_if_eq_charcode_p:NN 3 #1 ||
+        \token_if_eq_charcode_p:NN 4 #1 ||
+        \token_if_eq_charcode_p:NN 5 #1 ||
+        \token_if_eq_charcode_p:NN 6 #1 ||
+        \token_if_eq_charcode_p:NN 7 #1 ||
+        \token_if_eq_charcode_p:NN 8 #1 ||
+        \token_if_eq_charcode_p:NN 9 #1
+      }{
+        \prg_return_true:
+      }{
+        \prg_return_false:
+      }
+    }{
+      \prg_return_false:
+    }
+  }{
+    \prg_return_false:
+  }
+}
+
+% Define variants of \subfiglist_is_digit expanding its argument twice
+\cs_new:Npn \subfiglist_is_digit_p:t #1
+{
+  \subfiglist_exp_args:Nt \subfiglist_is_digit_p:N { #1 }
+}
+\cs_new:Npn \subfiglist_is_digit:tT #1 #2
+{
+  \subfiglist_exp_args:Nt \subfiglist_is_digit:NT { #1 } { #2 }
+}
+\cs_new:Npn \subfiglist_is_digit:tF #1 #2
+{
+  \subfiglist_exp_args:Nt \subfiglist_is_digit:NF { #1 } { #2 }
+}
+\cs_new:Npn \subfiglist_is_digit:tTF #1 #2 #3
+{
+  \subfiglist_exp_args:Nt \subfiglist_is_digit:NTF { #1 } { #2 } { #3 }
+}
+
+% Test whether token list is an integer or empty
+\prg_new_conditional:Npnn \subfiglist_is_integer_or_empty:n #1 { p, T, F, TF }
+%
+% #1: Token list
+%
+{
+  % Check whether token list is empty
+  \tl_if_empty:nTF { #1 }
+  {
+    \prg_return_true:
+  }{
+    % Does token list start with an explicit space?
+    \tl_if_head_is_space:nTF { #1 }
+    {
+      \prg_return_false:
+    }{
+      % Check whether first token is digit
+      \subfiglist_is_digit:tTF { \tl_head:n { #1 } }
+      {
+        % Check remaining tokens recursively
+        \subfiglist_is_integer_or_empty:tTF { \tl_tail:n { #1 } }
+        {
+          \prg_return_true:
+        }{
+          \prg_return_false:
+        }
+      }{
+        % Return false otherwise
+        \prg_return_false:
+      }
+    }
+  }
+}
+
+% Define variants of \subfiglist_is_integer_or_empty expanding its argument twice
+\cs_new:Npn \subfiglist_is_integer_or_empty_p:t #1
+{
+  \subfiglist_exp_args:Nt \subfiglist_is_integer_or_empty_p:n { #1 }
+}
+\cs_new:Npn \subfiglist_is_integer_or_empty:tT #1 #2
+{
+  \subfiglist_exp_args:Nt \subfiglist_is_integer_or_empty:nT { #1 } { #2 }
+}
+\cs_new:Npn \subfiglist_is_integer_or_empty:tF #1 #2
+{
+  \subfiglist_exp_args:Nt \subfiglist_is_integer_or_empty:nF { #1 } { #2 }
+}
+\cs_new:Npn \subfiglist_is_integer_or_empty:tTF #1 #2 #3
+{
+  \subfiglist_exp_args:Nt \subfiglist_is_integer_or_empty:nTF { #1 } { #2 } { #3 }
+}
+
+% Test whether token list is an integer
+\prg_new_conditional:Npnn \subfiglist_is_integer:n #1 { p, T, F, TF }
+%
+% #1: Token list
+%
+{
+  \bool_if:nTF
+  {
+    \bool_lazy_and_p:nn { ! \tl_if_empty_p:n { #1 } } { \subfiglist_is_integer_or_empty_p:n { #1 } }
+  }{
+    \prg_return_true:
+  }{
+    \prg_return_false:
+  }
+}
+
+
+% Define variants of \subfiglist_is_integer expanding its argument twice
+\cs_new:Npn \subfiglist_is_integer_p:t #1
+{
+  \subfiglist_exp_args:Nt \subfiglist_is_integer_p:n { #1 }
+}
+\cs_new:Npn \subfiglist_is_integer:tT #1 #2
+{
+  \subfiglist_exp_args:Nt \subfiglist_is_integer:nT { #1 } { #2 }
+}
+\cs_new:Npn \subfiglist_is_integer:tF #1 #2
+{
+  \subfiglist_exp_args:Nt \subfiglist_is_integer:nF { #1 } { #2 }
+}
+\cs_new:Npn \subfiglist_is_integer:tTF #1 #2 #3
+{
+  \subfiglist_exp_args:Nt \subfiglist_is_integer:nTF { #1 } { #2 } { #3 }
+}
+
+\cs_generate_variant:Nn \subfiglist_is_integer_p:n { V }
+\cs_generate_variant:Nn \subfiglist_is_integer:nT  { V }
+\cs_generate_variant:Nn \subfiglist_is_integer:nF  { V }
+\cs_generate_variant:Nn \subfiglist_is_integer:nTF { V }
 
 
 % Test whether token list is a float or empty
